--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -6513,7 +6513,7 @@ select:focus {
   border-bottom: 2px solid #222; }
   @media (min-width: 992px) {
     .info-section {
-      height: calc(100vh - 52px);
+      min-height: calc(100vh - 52px);
       display: -ms-flexbox;
       display: -webkit-flex;
       display: flex; } }
